# stand-in-language

./: .gitignore  Agda-README.md  BENCHMARK.md  CHANGELOG.md  COMPARISON.md  HANDOFF.md  PARALLEL.md  PROGRESS.md  README-Agda.md  README.md  STORY.md  benchDrain.agda  cabal.project  examples.tel  flake.nix  hie.yaml  telomare-backwards.agda  telomare.agda  telomare.cabal  tictactoe.agda
.github/workflows/: telomare-ci.yml
app/: BendMain.hs  InteractiveEval.hs  Main.hs  Repl.hs
bend/: HYBRID_PROGRESS.md  PORT.md  emitter.bend  hello.bend  ir.bend  lexer.bend  merge_sort.bend  parser.bend  resolver.bend  run_parity_tests.sh  run_resolver_tests.sh  run_telomare_bend.sh  run_telomare_hvm.sh  sizer.bend  telc.bend  test_ir.bend  test_parser.bend  test_resolver.bend  test_shared.bend  test_sizer.bend  util.bend
chez/: runtime.ss
ctc/: DIAGRAMS.md  HVM-BACKEND.md  ctc.cabal
ctc/src/: BenchMain.hs  HVM.hs  HvmMain.hs  Main.hs
design/: BEND_BACKEND.md  CLOSURES.md  HANDOFF-TELOMARE2-ARCHIVE.md  PRELUDE_MIGRATION.md  PROMOTE.md  RECURSION.md  SPACE.md  SYNTAX.md  T2-BEND-BACKEND.md  TELOMARE2-DESIGN.md  TELOMARE3-DESIGN.md  VALIDATION.md  generate-tictactoe.hs  telomare2.agda
spec/: Everything.agda  telomare-spec.agda-lib
spec/T3/: Abstract.agda  Adequacy.agda  Bound.agda  Place.agda  SpaceBound.agda
spec/T3/Categorical/: Interpretation.agda  Vocabulary.agda
spec/T3/Compiler/: ClosedRecursion.agda  Direct.agda  FiniteMachine.agda  Partition.agda
spec/T3/Core/: Copyable.agda  Syntax.agda  Ty.agda
spec/T3/Examples/: Basics.agda  Bounds.agda  Budgets.agda
spec/T3/Sem/: Exec.agda  Graded.agda  Length.agda  Space.agda  Value.agda
spec/T3/Source/: Affine.agda
spec/T3/Surface/: Sem.agda  Syntax.agda  Ty.agda
src/: Telomare.hs
src/Telomare/: Budget.hs  Copyable.hs  Core.hs  CoreMachine.hs  Decompiler.hs  Denotation.hs  Eval.hs  HvmBackend.hs  HvmBackendCcc.hs  Infer.hs  Levels.hs  Linear.hs  Machine.hs  Ops.hs  Parser.hs  Resolver.hs  Space.hs  Surface.hs  T2Backend.hs  Tel2.hs  Transport.hs
src/Telomare/Backend/: Bend.hs
src/Telomare/Compat/: Levels.hs  Parser.hs  PossibleData.hs  PrettyPrint.hs  Resolver.hs  Syntax.hs  TypeChecker.hs
src/Telomare/Compiler/: Closed.hs  Direct.hs
src/Telomare/Tel/: Eval.hs  Frontend.hs  Loop.hs
stdlib/: LegacyPrelude.tel2  Prelude.tel2
telomare3/: telomare3.cabal
telomare3/app/: Main.hs
telomare3/spec/: Everything.agda  telomare3-spec.agda-lib
telomare3/spec/T3/: Abstract.agda  Adequacy.agda  Place.agda
telomare3/spec/T3/Core/: Syntax.agda  Ty.agda
telomare3/spec/T3/Examples/: Basics.agda  Budgets.agda
telomare3/spec/T3/Sem/: Exec.agda  Graded.agda  Length.agda  Value.agda
telomare3/spec/T3/Surface/: Sem.agda  Syntax.agda  Ty.agda
telomare3/src/Telomare3/: Budget.hs  Core.hs  Denotation.hs  Infer.hs
telomare3/src/Telomare3/Tel/: Eval.hs  Frontend.hs  Loop.hs
telomare3/test/: BudgetOracle.hs  InferOracle.hs  Laws.hs  ParityTel.hs  Spec.hs  SpecVectors.hs
telomare3/test/golden/: ttt_quit.txt
test/: BendVectors.hs  BoundVectors.hs  BudgetOracle.hs  CertificateVectors.hs  Common.hs  CompileFailVectors.hs  CopyVectors.hs  InferOracle.hs  Laws.hs  LinearVectors.hs  MeterVectors.hs  ParityTel.hs  ParserTests.hs  ResolverTests.hs  SpaceVectors.hs  Spec.hs  SpecVectors.hs  SurfaceVectors.hs  Tel2Vectors.hs  TransportVectors.hs
test/compile-fail/: CopyList.hs  Drop.hs  Reuse.hs
test/golden/: tel2_ttt_invalid.txt  tel2_ttt_quit.txt  tel2_ttt_tie.txt  tel2_ttt_win.txt  ttt_invalid.txt  ttt_tie.txt  ttt_win.txt
test/programs/: CycleA.tel2  CycleB.tel2  MissingImport.tel2  PreludeHelpers.tel2  PreludeMap.tel2  bend-smoke.tel2  examples.tel2  tictactoe.tel2
test/programs/header-mismatch/: Entry.tel2  Prelude.tel2
test/programs/shadow/: Entry.tel2  Prelude.tel2
