cabal-version:      3.0
name:               telomare
version:            0.1.0.0
synopsis:           Total language runtime with knowable bounds
description:
  Telomare is a total-language experiment with a machine-checked core,
  graded resource semantics, and a metered .tel compatibility runtime.
license:            Apache-2.0
license-file:       LICENSE
author:             hhefesto
maintainer:         hhefesto@rdataa.com
category:           Language
build-type:         Simple
extra-source-files: README.md
                  , test/golden/*.txt
                  , test/programs/*.tel

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Telomare.Budget
                    , Telomare.Core
                    , Telomare.Denotation
                    , Telomare.Infer
                    , Telomare.Tel.Eval
                    , Telomare.Tel.Frontend
                    , Telomare.Tel.Loop
                    , Telomare.Compat.Levels
                    , Telomare.Compat.Parser
                    , Telomare.Compat.PossibleData
                    , Telomare.Compat.PrettyPrint
                    , Telomare.Compat.Resolver
                    , Telomare.Compat.Syntax
                    , Telomare.Compat.TypeChecker
    build-depends:    base
                    , bytestring
                    , containers
                    , cryptonite
                    , data-fix
                    , deepseq
                    , deriving-compat
                    , dlist
                    , filepath
                    , free
                    , genvalidity
                    , lens
                    , megaparsec
                    , memory
                    , mtl
                    , recursion-schemes
                    , strict
                    , transformers
                    , utf8-string
                    , validity
    default-language: Haskell2010

executable telomare
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
                    , containers
                    , optparse-applicative
                    , telomare
    default-language: Haskell2010

test-suite telomare-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    BudgetOracle
                    , InferOracle
                    , Laws
                    , ParityTel
                    , SpecVectors
    hs-source-dirs:   test
    build-depends:    base
                    , containers
                    , directory
                    , QuickCheck
                    , telomare
    default-language: Haskell2010
