cabal-version:      3.0
name:               telomare
version:            0.1.0.0
synopsis:           Total language runtime with knowable bounds
description:
  Telomare is a total-language experiment with a machine-checked core,
  graded resource semantics, and typed .tel2 finite-grid games.
license:            Apache-2.0
license-file:       LICENSE
author:             hhefesto
maintainer:         hhefesto@rdataa.com
category:           Language
build-type:         Simple
extra-source-files: README.md
                   , STORY.md
                   , test/golden/*.txt
                   , test/programs/*.tel
                   , test/programs/*.tel2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Telomare.Budget
                    , Telomare.Compiler.Direct
                    , Telomare.Copyable
                    , Telomare.Core
                    , Telomare.CoreMachine
                    , Telomare.Denotation
                    , Telomare.Infer
                    , Telomare.Surface
                    , Telomare.Tel.Eval
                    , Telomare.Tel.Frontend
                    , Telomare.Tel.Loop
                    , Telomare.Compat.Levels
                    , Telomare.Compat.Parser
                    , Telomare.Compat.PossibleData
                    , Telomare.Compat.PrettyPrint
                    , Telomare.Compat.Resolver
                    , Telomare.Compat.Syntax
                    , Telomare.Compat.TypeChecker
    build-depends:    base
                    , bytestring
                    , containers
                    , cryptonite
                    , data-fix
                    , deepseq
                    , deriving-compat
                    , dlist
                    , filepath
                    , free
                    , genvalidity
                    , lens
                    , megaparsec
                    , memory
                    , mtl
                    , recursion-schemes
                    , strict
                    , transformers
                    , utf8-string
                    , validity
    default-language: Haskell2010

executable telomare
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
                    , containers
                    , filepath
                    , optparse-applicative
                    , telomare
    default-language: Haskell2010

test-suite telomare-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    BudgetOracle
                    , CertificateVectors
                    , CopyVectors
                    , InferOracle
                    , Laws
                    , MeterVectors
                    , ParityTel
                    , SpecVectors
                    , SurfaceVectors
                    , Tel2Vectors
    hs-source-dirs:   test
    build-depends:    base
                    , containers
                    , directory
                    , free
                    , QuickCheck
                    , telomare
    default-language: Haskell2010
