cabal-version:      3.0
name:               telomare
version:            0.1.0.0
synopsis:           Total language runtime with knowable bounds
description:
  Telomare is a total-language experiment with a machine-checked core,
  graded resource semantics, and a typed affine .tel2 language.
license:            Apache-2.0
license-file:       LICENSE
author:             hhefesto
maintainer:         hhefesto@rdataa.com
category:           Language
build-type:         Simple
data-files:         stdlib/*.tel2
extra-source-files: README.md
                   , STORY.md
                   , design/PRELUDE_MIGRATION.md
                   , design/BEND_BACKEND.md
                   , test/golden/*.txt
                   , test/programs/*.tel
                   , test/programs/*.tel2
                   , test/programs/header-mismatch/*.tel2
                   , test/programs/shadow/*.tel2
                   , test/compile-fail/*.hs

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    autogen-modules:  Paths_telomare
    other-modules:    Paths_telomare
    exposed-modules:  Telomare.Backend.Bend
                    , Telomare.Budget
                    , Telomare.Compiler.Closed
                    , Telomare.Compiler.Direct
                    , Telomare.Copyable
                    , Telomare.Core
                    , Telomare.Machine
                    , Telomare.Denotation
                    , Telomare.Infer
                    , Telomare.Linear
                    , Telomare.Ops
                    , Telomare.Surface
                    , Telomare.Transport
                    , Telomare.Tel2
                    , Telomare.Tel.Eval
                    , Telomare.Tel.Frontend
                    , Telomare.Tel.Loop
                    , Telomare.Compat.Levels
                    , Telomare.Compat.Parser
                    , Telomare.Compat.PossibleData
                    , Telomare.Compat.PrettyPrint
                    , Telomare.Compat.Resolver
                    , Telomare.Compat.Syntax
                    , Telomare.Compat.TypeChecker
    build-depends:    base
                    , bytestring
                    , containers
                    , cryptonite
                    , data-fix
                    , deepseq
                    , directory
                    , deriving-compat
                    , dlist
                    , filepath
                    , free
                    , genvalidity
                    , lens
                    , megaparsec
                    , memory
                    , mtl
                    , recursion-schemes
                    , strict
                    , transformers
                    , utf8-string
                    , validity
    default-language: Haskell2010

executable telomare
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
                    , containers
                    , filepath
                    , optparse-applicative
                    , telomare
    default-language: Haskell2010

executable telomare-bend
    import:           warnings
    main-is:          BendMain.hs
    hs-source-dirs:   app
    build-depends:    base
                    , telomare
    default-language: Haskell2010

test-suite telomare-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    BendVectors
                    , BudgetOracle
                    , CertificateVectors
                    , CompileFailVectors
                    , CopyVectors
                    , InferOracle
                    , Laws
                    , LinearVectors
                    , MeterVectors
                    , ParityTel
                    , SpecVectors
                    , SurfaceVectors
                    , Tel2Vectors
                    , TransportVectors
    hs-source-dirs:   test
    build-depends:    base
                    , containers
                    , directory
                    , filepath
                    , free
                    , process
                    , QuickCheck
                    , telomare
    default-language: Haskell2010
