cabal-version:      3.0
name:               telomare3
version:            0.1.0.0
synopsis:           Telomare 3 — total language with knowable bounds, from first principles
description:
  Greenfield reimplementation of telomare via denotational design.
  The machine-checked specification lives in spec/ (Agda, --safe, zero
  postulates); the Haskell here mirrors it constructor-for-constructor.
  See design/TELOMARE3-DESIGN.md at the repository root.
license:            Apache-2.0
author:             hhefesto
maintainer:         hhefesto@rdataa.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Telomare3.Core
    hs-source-dirs:   src
    build-depends:    base
    default-language: Haskell2010

executable telomare3
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
                    , telomare3
    default-language: Haskell2010

test-suite telomare3-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base
                    , telomare3
    default-language: Haskell2010
